--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Я фронтенд разработчица из Красноярска. Хорошо знаю Vue.js. Вот мое портфолио.">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="author" content="Yulia Skultan">
-    <meta name="keywords" content="yskultan, Skultan, software engineer, front-end, engineer, vue, developer, web developer, javascript">
+    <meta name="keywords" content="Юлия Скултан, yskultan, Yulia Skultan, front-end, vue, developer, web developer, javascript">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Юлия Скултан</title>
   </head>
